# rascal

./: .gitignore  CMakeLists.txt  Makefile  default.frag  default.vert  main.cc
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/: default.frag  default.vert
res/shaders/: default.frag  default.vert  distance_field.frag  error.frag  jfa.frag  jump_flood.frag  jump_flood_prep.frag  jumpflood.frag  lighting.frag  scene.frag  vertex_colour.frag
src/: client.cc  client.h  main.cc  shader.cc  shader.h  state.cc  state.h  texture.cc  texture.h
src/gfx/: framebuffer.cc  framebuffer.h  gfx.h  mesh.cc  mesh.h  shader.cc  shader.h  texture.cc  texture.h
